--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -13,3 +13,15 @@ services:
       - "9001:9001"                    # Port for the admin console
     restart: always                    # Automatically restart the container.
     command: server /data --address ":9000" --console-address ":9001"
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "8082:8080"  # Mapea el puerto 8080 del contenedor al 8081 en el host
+    restart: unless-stopped  # Reiniciar a menos que se detenga manualmente
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
